# Graph-Propagated-Latent-Similarity-in-Agent-Based-Segregation-Dynamics

./: .gitignore  CMakeLists.txt  README.md  build_paper_assets.py  make_snapshot_figure.py  make_thesis_figures.py  summarize_size_sweep.py
cpp/: sgnn_runner.cpp
outputs/size_sweep/: final_cluster_distributions.csv  final_clusters.csv  table_sizes_20_to_200.csv
outputs/size_sweep/analysis/: final_summary_by_variant_size.csv  final_summary_by_variant_size_layers.csv  master_runs.csv  master_steps.csv  step_summary_by_variant_size_layers.csv  table_main_results_compact.csv
outputs/size_sweep/metrics/: baseline_size100_seed11_L1_cosine.csv  baseline_size100_seed17_L1_cosine.csv  baseline_size100_seed20_L1_cosine.csv  baseline_size100_seed22_L1_cosine.csv  baseline_size100_seed42_L1_cosine.csv  baseline_size100_seed605_L1_cosine.csv  baseline_size100_seed70_L1_cosine.csv  baseline_size120_seed11_L1_cosine.csv  baseline_size120_seed17_L1_cosine.csv  baseline_size120_seed20_L1_cosine.csv  baseline_size120_seed22_L1_cosine.csv  baseline_size120_seed42_L1_cosine.csv  baseline_size120_seed605_L1_cosine.csv  baseline_size120_seed70_L1_cosine.csv  baseline_size140_seed11_L1_cosine.csv  baseline_size140_seed17_L1_cosine.csv  baseline_size140_seed20_L1_cosine.csv  baseline_size140_seed22_L1_cosine.csv  baseline_size140_seed42_L1_cosine.csv  baseline_size140_seed605_L1_cosine.csv  baseline_size140_seed70_L1_cosine.csv  baseline_size20_seed11_L1_cosine.csv  (+321 more)
scripts/: plot_results.py  run_experiments.py
tables/: table_full_final_summary.tex  table_main_results_compact.tex
